@@ -133,6 +133,28 @@ public class RealmQueryTest extends AndroidTestCase{
         assertEquals(22, resultList.size());
     }
 
+    public void testRealmQueryNot() {
+        populateTestRealm(); // create TEST_DATA_SIZE objects
+
+        // only one object with value 5 -> TEST_DATA_SIZE-1 object with value "not 5"
+        RealmResults<AllTypes> list1 = testRealm.where(AllTypes.class).not().equalTo(FIELD_LONG, 5).findAll();
+        assertEquals(TEST_DATA_SIZE - 1, list1.size());
+
+        // not().greater() and lessThenOrEqual() must be the same
+        RealmResults<AllTypes> list2 = testRealm.where(AllTypes.class).not().greaterThan(FIELD_LONG, 5).findAll();
+        RealmResults<AllTypes> list3 = testRealm.where(AllTypes.class).lessThanOrEqualTo(FIELD_LONG, 5).findAll();
+        assertEquals(list2.size(), list3.size());
+        for (int i = 0; i < list2.size(); i++) {
+            assertEquals(list2.get(i).getColumnLong(), list3.get(i).getColumnLong());
+        }
+
+        // a not() alone must fail
+        try {
+            RealmResults<AllTypes> list4 = testRealm.where(AllTypes.class).not().findAll();
+        } catch (RuntimeException ignored) {
+        }
+    }
+
     public void testRealmQueryImplicitAnd() {
         populateTestRealm(200);
 
