@@ -1,4 +1,5 @@
 0.79
+ * Added RealmQuery.not() to negate a query condition.
  * Better error reporting when trying to create or open a Realm file fails.
  * Improved error reporting in case of missing accessors in model classes.
  * Re-enabled RealmResults.remove(index) and RealmResults.removeLast().
